[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "form-check"
version = "0.1.0"
description = "Upload a workout video and get an AI-powered form score for squats, deadlifts, and push-ups using MediaPipe pose estimation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mediapipe>=0.10",
    "opencv-python-headless>=4.8",
    "typer>=0.9",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
form-check = "form_check.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
